--- a/toolchain/BUILD.bazel
+++ b/toolchain/BUILD.bazel
@@ -3,14 +3,14 @@ load("@bazel_skylib//rules:common_settings.bzl",
 
 # package(default_visibility = ["//visibility:public"])
 
-string_flag(
-    name = "toolchain",
-    values = ["bytecode", "native"],
-    build_setting_default = "bytecode",
-    visibility = [
-        # "//otherlibs/dynlink:__pkg__",
-        "//toolchain/selection:__pkg__"
-    ]
-)
+# string_flag(
+#     name = "toolchain",
+#     values = ["bytecode", "native"],
+#     build_setting_default = "bytecode",
+#     visibility = [
+#         # "//otherlibs/dynlink:__pkg__",
+#         "//toolchain/selection:__pkg__"
+#     ]
+# )
 
 
