--- a/platforms/BUILD.bazel
+++ b/platforms/BUILD.bazel
@@ -4,6 +4,13 @@ exports_files(["BUILD.bazel"])
 
 package(default_visibility = ["//visibility:public"])
 
+config_setting(name = "windows_x86_32?",
+               constraint_values = [
+                   "@platforms//cpu:x86_32",
+                   "@platforms//os:windows"
+               ])
+
+
 # see //:xtarget for list of architectures
 
 constraint_setting(name = "platform")
@@ -20,6 +27,8 @@ platform(name = "vm",
 
 # Bazel-defined arch names
 # see https://github.com/bazelbuild/platforms/blob/main/cpu/BUILD
+
+##FIXME: move thest to //platforms/cpu
 
 # OCaml-defined names used for platform names:
 platform(name = "amd64", constraint_values = ["@platforms//cpu:x86_64"])
